outputs/csi500-test/treevoo/2025-07-28_01-48-49/problem_iter24_response4.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 57
    return df[['Sum_Daily
               ^
SyntaxError: unterminated string literal (detected at line 57)
